@@ -1,13 +1,13 @@
 root := ..
 subdirs := 
 pre-targets := 
-targets := cryptraw crypttest crypttest2
-bin := cryptraw
+targets := cipherraw ciphertest ciphertest2
+bin := cipherraw
 include ${root}/Makefile.cfg
 
-cpp += cryptraw.cpp
-cpp += crypttest.cpp
-cpp += crypttest2.cpp
+cpp += cipherraw.cpp
+cpp += ciphertest.cpp
+cpp += ciphertest2.cpp
 
 s = $(c) $(cpp)
 d = $(c:%.c=%.d) $(cpp:%.cpp=%.d)
@@ -15,14 +15,14 @@ o = $(c:%.c=%.o) $(cpp:%.cpp=%.o)
 l =  -lsword -lstdc++
 
 
-cryptraw: cryptraw.o
-	$(CC) $(LFLAGS) -o $@ cryptraw.o $(l) $(l) -O0
+cipherraw: cipherraw.o
+	$(CC) $(LFLAGS) -o $@ cipherraw.o $(l) $(l) -O0
 
-crypttest: crypttest.o
-	$(CC) $(LFLAGS) -o $@ crypttest.o $(l) $(l) -O0
+ciphertest: ciphertest.o
+	$(CC) $(LFLAGS) -o $@ ciphertest.o $(l) $(l) -O0
 
-crypttest2: crypttest2.o
-	$(CC) $(LFLAGS) -o $@ crypttest2.o $(l) $(l) -O0
+ciphertest2: ciphertest2.o
+	$(CC) $(LFLAGS) -o $@ ciphertest2.o $(l) $(l) -O0
 
 
 ifneq ($(nodeps),yes)
